# Telco_v6

./: .gitignore  CELL_TOWER_LOOKUP_FIX.md  CHANGELOG.md  CONTRIBUTING.md  CREATE_APP_IN_SNOWSIGHT.md  ExampleQuestions.md  LICENSE  MAPBOX_FIX_SUMMARY.md  QUICK_CREATE_GUIDE.md  QUICK_START_DIAGNOSTIC.md  README.md  TROUBLESHOOTING.md  connectMapBoxNoKey.sql  enable_cross_region_inference.sql  main.py  mapbox_access_setup.sql  pyproject.toml  requirements.txt  telco_network_opt.yaml  test_cache_button.py  test_cache_query.sql  verify_cache.py
Documentation/: AI_CACHE_IMPLEMENTATION_SUMMARY.md  CACHE_DIAGNOSTIC_RESULTS.md  CACHE_FIX_SUMMARY.md  CELL_TOWER_LOOKUP_FIX.md  CLEANUP_SUMMARY.md  DEFAULT_MODEL_UPDATE.md  EMOJI_REMOVAL_SUMMARY.md  FILE_ORGANIZATION.md  HEADER_SPACING_FIX.md  LOGO_REMOVAL_SUMMARY.md  MAPBOX_FIX_SUMMARY.md  SPCS_MIGRATION_SUMMARY.md
Setup/: START_DEMO.sql  STOP_DEMO.sql  create_ai_cache_tables.sql  setup_data_generators.sql
Setup/spcs_migration/: 00_RUN_ALL_MIGRATION_STEPS.sql  01_create_compute_pool.sql  02_create_external_access_integrations.sql  03_create_streamlit_app_spcs.sql  (+5 more)
Trash/: 03_migrate_existing_app.sql  MIGRATION_COMPLETED.md  README.md
pages/: 0_AI_Insights_and_Recommendations.py  10_AI_Testing_Monitoring.py  11_AI_Documentation.py  12_Snowflake_Intelligence.py  1_Customer_Profile.py  2_Cell_Tower_Lookup.py  3_Geospatial_Analysis.py  4_Correlation_Analytics.py  7_Executive_AI_Summary.py  8_Predictive_Analytics.py  9_AI_Network_Assistant.py
utils/: __init__.py  ai_cache.py  aisql_functions.py  design_system.py
