[project]
name = "telco-network-optimization"
version = "1.0.0"
description = "Telco Network Intelligence Suite - AI-Powered Network Operations Command Center"
requires-python = ">=3.11,<3.12"
dependencies = [
    # Streamlit - must be >= 1.49 for SPCS
    "streamlit>=1.49.0",
    
    # Core data processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    
    # Geospatial and visualization
    "pydeck>=0.8.0",
    "plotly>=5.18.0",
    "matplotlib>=3.7.0",
    "h3>=3.7.0",
    "branca>=0.6.0",
    
    # Statistical analysis
    "scipy>=1.11.0",
    
    # Additional utilities
    "altair>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
